--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-codemirror": "^1.0.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.11.0",
     "react-router-dom": "^6.15.0",
     "socket.io-client": "^4.7.2",
     "sort-by": "^1.2.0",
