--- a/package.json
+++ b/package.json
@@ -14,16 +14,15 @@
     "firebase": "^10.4.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
-    "react-avatar": "^5.0.3",
-    "react-codemirror": "^1.0.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.15.0",
+    "shortid": "^2.2.16",
     "socket.io-client": "^4.7.2",
-    "sort-by": "^1.2.0",
-    "uuid": "^9.0.1"
+    "sort-by": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
@@ -37,6 +36,5 @@
     "postcss": "^8.4.29",
     "tailwindcss": "^3.3.3",
     "vite": "^4.4.5"
-  },
-  "proxy": "http://localhost:3000/"
+  }
 }
